--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Emma GUILBAULT</title>
-    <meta name="description" content="Développeuse full-stack avec 5 ans d'expérience et vivant en Normandie. Je contribue à des projets engagés et impactants !">
+    <meta
+      name="description"
+      content="Développeuse full-stack avec 5 ans d'expérience et vivant en Normandie. Je contribue à des projets engagés et impactants !"
+    />
   </head>
   <body>
     <div id="root"></div>
