--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Emma GUILBAULT</title>
+    <title>CV Emma GUILBAULT</title>
+    <meta
+      name="description"
+      content="Développeuse full-stack avec 5 ans d'expérience et vivant en Normandie. Je contribue à des projets engagés et impactants !"
+    />
   </head>
   <body>
     <div id="root"></div>
