add meta tag for google indexing

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Développeuse full-stack avec 5 ans d'expérience et vivant en Normandie. Je contribue à des projets engagés et impactants !"
     />
+    <meta
+      name="google-site-verification"
+      content="409ND2jKpfdKHIV7DUcawnHEye4CgL5sTUecroOjQGI"
+    />
   </head>
   <body>
     <div id="root"></div>
