chore: update site description

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CV Emma GUILBAULT</title>
     <meta
       name="description"
-      content="Développeuse full-stack avec 5 ans d'expérience et vivant en Normandie. Je contribue à des projets engagés et impactants !"
+      content="Développeuse full stack avec 5 ans d'expérience et vivant en Normandie. Je contribue à des projets engagés et impactants !"
     />
     <meta
       name="google-site-verification"
