add open graph title, description, site name and image

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
       name="description"
       content="Développeuse full stack avec 5 ans d'expérience et vivant en Normandie. Je contribue à des projets engagés et impactants !"
     />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="CV Emma GUILBAULT" />
     <meta
       name="google-site-verification"
       content="409ND2jKpfdKHIV7DUcawnHEye4CgL5sTUecroOjQGI"
     />
+    <meta
+      name="title"
+      property="og:title"
+      content="CV en ligne d'Emma GUILBAULT"
+    />
+    <meta
+      name="description"
+      property="og:description"
+      content="A React + Typescript app, build with Vite and deployed with Netlify to showcase some of my front-end development skills."
+    />
+    <meta name="image" property="og:image" content="/website-screenshot.png" />
   </head>
   <body>
     <div id="root"></div>
