fix: open graph image url

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
       property="og:description"
       content="A React + Typescript app, build with Vite and deployed with Netlify to showcase some of my front-end development skills."
     />
-    <meta name="image" property="og:image" content="/website-screenshot.png" />
+    <meta
+      name="image"
+      property="og:image"
+      content="https://emma-guilbault.netlify.app/website-screenshot.png"
+    />
   </head>
   <body>
     <div id="root"></div>
